fixed the background image to fit screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,12 @@
 }
 
 body {
-    background-image: url(https://audit-invest.com.ua/wp-content/uploads/2017/06/Savin-NY-Website-Background-Web1-kopiya.jpg);
-    background-repeat: no-repeat;
-    font-family: 'Lato', sans-serif;
     text-align: left;
     margin-bottom: 60px;
+    background-image: url(https://audit-invest.com.ua/wp-content/uploads/2017/06/Savin-NY-Website-Background-Web1-kopiya.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover
 }
 
 .container {
